added grid container

--- a/index.html
+++ b/index.html
@@ -7,28 +7,29 @@
     <title>Document</title>
 </head>
 <body>
+<div class="grid-container">
     <header>
         <h1>Rock, paper, sissors, lizard, spock!</h1>
     </header>
     <main>
         <div>
-            <img src="" alt="">
+            <img src="" alt="Rock">
             <h3>Rock</h3>
         </div>
         <div>
-            <img src="" alt="">
+            <img src="" alt="Paper">
             <h3>Paper</h3>
         </div>
         <div>
-            <img src="" alt="">
+            <img src="" alt="Sissors">
             <h3>Sissors</h3>
         </div>
         <div>
-            <img src="" alt="">
+            <img src="" alt="Lizard">
             <h3>Lizard</h3>
         </div>
         <div>
-            <img src="" alt="">
+            <img src="" alt="Spock">
             <h3>Spock</h3>
         </div>
     </main>
@@ -36,5 +37,7 @@
         <h4>Rules</h4>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, tempore?</p>
     </footer>
+</div>
 </body>
+
 </html>
