--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -35,7 +39,25 @@
     </main>
     <footer>
         <h4>Rules</h4>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, tempore?</p>
+        <p>Scissors cuts Paper <br>
+
+            Paper covers Rock <br>
+
+            Rock crushes Lizard <br>
+
+            Lizard poisons Spock <br>
+
+            Spock smashes Scissors <br>
+
+            Scissors decapitates Lizard <br>
+
+            Lizard eats Paper <br>
+
+            Paper disproves Spock <br>
+
+            Spock vaporizes Rock <br>
+
+            Rock crushes Scissors</p>
     </footer>
 </div>
 </body>
