styles grid + added title
changed background colour, text colour, bositioning of main-content. Also added classes to main-content.
Added propper title "Rock, paper, sissors, lizard, spock!".

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Rock, paper, sissors, lizard, spock!</title>
 </head>
 <body>
 <div class="grid-container">
@@ -16,48 +16,48 @@
         <h1>Rock, paper, sissors, lizard, spock!</h1>
     </header>
     <main>
-        <div>
+        <div class="choices">
             <img src="" alt="Rock">
             <h3>Rock</h3>
         </div>
-        <div>
+        <div class="choices">
             <img src="" alt="Paper">
             <h3>Paper</h3>
         </div>
-        <div>
+        <div class="choices">
             <img src="" alt="Sissors">
             <h3>Sissors</h3>
         </div>
-        <div>
+        <div class="choices">
             <img src="" alt="Lizard">
             <h3>Lizard</h3>
         </div>
-        <div>
+        <div class="choices">
             <img src="" alt="Spock">
             <h3>Spock</h3>
         </div>
     </main>
     <footer>
         <h4>Rules</h4>
-        <p>Scissors cuts Paper <br>
+        <p>- Scissors cuts Paper <br> <br>
 
-            Paper covers Rock <br>
+            - Paper covers Rock <br> <br>
 
-            Rock crushes Lizard <br>
+            - Rock crushes Lizard <br> <br>
 
-            Lizard poisons Spock <br>
+            - Lizard poisons Spock <br> <br>
 
-            Spock smashes Scissors <br>
+            - Spock smashes Scissors <br> <br>
 
-            Scissors decapitates Lizard <br>
+            - Scissors decapitates Lizard <br> <br>
 
-            Lizard eats Paper <br>
+            - Lizard eats Paper <br> <br>
 
-            Paper disproves Spock <br>
+            - Paper disproves Spock <br> <br>
 
-            Spock vaporizes Rock <br>
+            - Spock vaporizes Rock <br> <br>
 
-            Rock crushes Scissors</p>
+            - Rock crushes Scissors</p> <br>
     </footer>
 </div>
 </body>
