--- a/index.html
+++ b/index.html
@@ -16,25 +16,27 @@
         <h1>Rock, paper, sissors, lizard, spock!</h1>
     </header>
     <main>
-        <div class="choices">
-            <img src="" alt="Rock">
-            <h3>Rock</h3>
-        </div>
-        <div class="choices">
-            <img src="" alt="Paper">
-            <h3>Paper</h3>
-        </div>
-        <div class="choices">
-            <img src="" alt="Sissors">
-            <h3>Sissors</h3>
-        </div>
-        <div class="choices">
-            <img src="" alt="Lizard">
-            <h3>Lizard</h3>
-        </div>
-        <div class="choices">
-            <img src="" alt="Spock">
-            <h3>Spock</h3>
+        <div id="playing-field">
+            <div class="choices">
+                <img src="" alt="Rock">
+                <h3>Rock</h3>
+            </div>
+            <div class="choices">
+                <img src="" alt="Paper">
+                <h3>Paper</h3>
+            </div>
+            <div class="choices">
+                <img src="" alt="Sissors">
+                <h3>Sissors</h3>
+            </div>
+            <div class="choices">
+                <img src="" alt="Lizard">
+                <h3>Lizard</h3>
+            </div>
+            <div class="choices">
+                <img src="" alt="Spock">
+                <h3>Spock</h3>
+            </div>
         </div>
     </main>
     <footer>
