added content to playing field
Added a "choose your fighter" and point counter. Also removed images for the different choices to help the retro style.

--- a/index.html
+++ b/index.html
@@ -17,24 +17,24 @@
     </header>
     <main>
         <div id="playing-field">
+            <h2>Choose your fighter!</h2>
+            <div id="point-count">
+            <p id="comp-point">Computer points:</p>
+            <p id="you-point">Your points:</p>
+            </div>
             <div class="choices">
-                <img src="" alt="Rock">
                 <h3>Rock</h3>
             </div>
             <div class="choices">
-                <img src="" alt="Paper">
                 <h3>Paper</h3>
             </div>
             <div class="choices">
-                <img src="" alt="Sissors">
                 <h3>Sissors</h3>
             </div>
             <div class="choices">
-                <img src="" alt="Lizard">
                 <h3>Lizard</h3>
             </div>
             <div class="choices">
-                <img src="" alt="Spock">
                 <h3>Spock</h3>
             </div>
         </div>
