made layout work on more screen sizes + star trek styling
Changed the sizes of things so that it works on all desktop/laptop screen sizes. Also styled the choices to look like the buttons on the screens from star trek TOS.

--- a/index.html
+++ b/index.html
@@ -22,20 +22,22 @@
             <p id="comp-point">Computer points:</p>
             <p id="you-point">Your points:</p>
             </div>
-            <div class="choices">
-                <h3>Rock</h3>
-            </div>
-            <div class="choices">
-                <h3>Paper</h3>
-            </div>
-            <div class="choices">
-                <h3>Sissors</h3>
-            </div>
-            <div class="choices">
-                <h3>Lizard</h3>
-            </div>
-            <div class="choices">
-                <h3>Spock</h3>
+            <div id="choice-wrapper">
+                <div class="choices-red">
+                    <a href=""><h3>Rock</h3></a>
+                </div>
+                <div class="choices-blue">
+                    <a href=""><h3>Paper</h3></a>
+                </div>
+                <div class="choices-red">
+                    <a href=""><h3>Sissors</h3></a>
+                </div>
+                <div class="choices-red" class=>
+                    <a href=""><h3>Lizard</h3></a>
+                </div>
+                <div class="choices-blue">
+                    <a href=""><h3>Spock</h3></a>
+                </div>
             </div>
         </div>
     </main>
