added media querries
Added media querries in order to make it work on all screens. On mobile i changed the grid layout and on ipad i only changed the sizes. Hade a lot more to do in order to make sure it works propperly.

--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
                 <div class="choices-red">
                     <a href=""><h3>Rock</h3></a>
                 </div>
-                <div class="choices-blue">
-                    <a href=""><h3>Paper</h3></a>
-                </div>
-                <div class="choices-red">
-                    <a href=""><h3>Sissors</h3></a>
-                </div>
-                <div class="choices-red" class=>
-                    <a href=""><h3>Lizard</h3></a>
-                </div>
-                <div class="choices-blue">
-                    <a href=""><h3>Spock</h3></a>
-                </div>
+                <a href=""><div class="choices-blue">
+                    <h3>Paper</h3>
+                </div></a>
+                <a href=""><div class="choices-red">
+                    <h3>Sissors</h3>
+                </div></a>
+                <a href=""><div class="choices-red">
+                    <h3>Lizard</h3>
+                </div></a>
+                <a href=""><div class="choices-blue">
+                    <h3>Spock</h3>
+                </div></a>
             </div>
         </div>
     </main>
