added js script and added a starting page for the game
The starting page is for choosing how many points you need to win. Then you get sent to the game page.

--- a/index.html
+++ b/index.html
@@ -4,66 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>Rock, paper, sissors, lizard, spock!</title>
+    <title>Start page</title>
 </head>
 <body>
-<div class="grid-container">
-    <header>
-        <h1>Rock, paper, sissors, lizard, spock!</h1>
-    </header>
-    <main>
-        <div id="playing-field">
-            <h2>Choose your fighter!</h2>
-            <div id="point-count">
-            <p id="comp-point">Computer points:</p>
-            <p id="you-point">Your points:</p>
-            </div>
-            <div id="choice-wrapper">
-                <div class="choices-red">
-                    <a href=""><h3>Rock</h3></a>
-                </div>
-                <a href=""><div class="choices-blue">
-                    <h3>Paper</h3>
-                </div></a>
-                <a href=""><div class="choices-red">
-                    <h3>Sissors</h3>
-                </div></a>
-                <a href=""><div class="choices-red">
-                    <h3>Lizard</h3>
-                </div></a>
-                <a href=""><div class="choices-blue">
-                    <h3>Spock</h3>
-                </div></a>
-            </div>
-        </div>
-    </main>
-    <footer>
-        <h4>Rules</h4>
-        <p>- Scissors cuts Paper <br> <br>
-
-            - Paper covers Rock <br> <br>
-
-            - Rock crushes Lizard <br> <br>
-
-            - Lizard poisons Spock <br> <br>
-
-            - Spock smashes Scissors <br> <br>
-
-            - Scissors decapitates Lizard <br> <br>
-
-            - Lizard eats Paper <br> <br>
-
-            - Paper disproves Spock <br> <br>
-
-            - Spock vaporizes Rock <br> <br>
-
-            - Rock crushes Scissors</p> <br>
-    </footer>
-</div>
+    <h1></h1>
+    <h2></h2>
+    <div id="choice-point-wrapper">
+    <div class="choices-red">
+        <a href=""><h3>3 points</h3></a>
+    </div>
+    <a href=""><div class="choices-blue">
+        <h3>5 points</h3>
+    </div></a>
+    <a href=""><div class="choices-red">
+        <h3>10 points</h3>
+    </div></a>
+    </div>
 </body>
-
 </html>
