made the starting page + linked js
I created a basic starting page inspired by older arcade games

--- a/game.html
+++ b/game.html
@@ -24,20 +24,20 @@
             </div>
             <div id="choice-wrapper">
                 <div class="choices-red">
-                    <a href=""><h3>Rock</h3></a>
+                    <h3>Rock</h3>
                 </div>
-                <a href=""><div class="choices-blue">
+                <div class="choices-blue">
                     <h3>Paper</h3>
-                </div></a>
-                <a href=""><div class="choices-red">
+                </div>
+                <div class="choices-red">
                     <h3>Sissors</h3>
-                </div></a>
-                <a href=""><div class="choices-red">
+                </div>
+                <div class="choices-red">
                     <h3>Lizard</h3>
-                </div></a>
-                <a href=""><div class="choices-blue">
+                </div>
+                <div class="choices-blue">
                     <h3>Spock</h3>
-                </div></a>
+                </div>
             </div>
         </div>
     </main>
@@ -64,7 +64,6 @@
             - Rock crushes Scissors</p> <br>
     </footer>
 </div>
-<script src="script.js"></script>
+<script src="assets/js/script.js"></script>
 </body>
-
 </html>
