--- a/index.html
+++ b/index.html
@@ -4,21 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Start page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style_start.css">
+    <title>Rock, paper, scissors, lizard, spock</title>
 </head>
 <body>
-    <h1></h1>
-    <h2></h2>
-    <div id="choice-point-wrapper">
-    <div class="choices-red">
-        <a href=""><h3>3 points</h3></a>
-    </div>
-    <a href=""><div class="choices-blue">
-        <h3>5 points</h3>
-    </div></a>
-    <a href=""><div class="choices-red">
-        <h3>10 points</h3>
-    </div></a>
-    </div>
+    <header>
+        <h1>Rock, paper, scissors, lizard, spock</h1>
+    </header>
+    <main>
+        <h2>How many points will be needed to win?</h2>
+        <h2>Choose one option to start:</h2>
+        <div id="choice-point-wrapper">
+            <a href="game.html" class="game-link"><h3>3 points</h3></a>
+            <a href="game.html" class="game-link"><h3>5 points</h3></a>
+            <a href="game.html" class="game-link"><h3>10 points</h3></a> 
+        </div>
+</main>
 </body>
+<script src="assets/js/script.js"></script>
 </html>
