--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <h2>How many points will be needed to win?</h2>
         <h2>Choose one option to start:</h2>
         <div id="choice-point-wrapper">
-            <a href="game.html" class="game-link"><h3>3 points</h3></a>
-            <a href="game.html" class="game-link"><h3>5 points</h3></a>
-            <a href="game.html" class="game-link"><h3>10 points</h3></a> 
+            <a href="game.html" class="game-link" id="3-point" onclick="pointChoiceEvent(threePoint);"><h3>3 points</h3></a>
+            <a href="game.html" class="game-link" id="5-point"><h3>5 points</h3></a>
+            <a href="game.html" class="game-link" id="10-point"><h3>10 points</h3></a> 
         </div>
 </main>
 </body>
