changed links to buttons, added "start game"
Changed the links for point chooser to buttons instead and added a start game link. Shis way you choose and then you klick the link to start the game.

--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
         <h2>How many points will be needed to win?</h2>
         <h2>Choose one option to start:</h2>
         <div id="choice-point-wrapper">
-            <a href="game.html" class="game-link" id="3-point"><h3>3 points</h3></a>
-            <a href="game.html" class="game-link" id="5-point"><h3>5 points</h3></a>
-            <a href="game.html" class="game-link" id="10-point"><h3>10 points</h3></a> 
+            <button id="3-point">3 points</button>
+            <button id="5-point">5 points</button>
+            <button id="10-point">10 points</button> 
         </div>
+        <a href="game.html">START GAME</a>
 </main>
 </body>
 <script src="assets/js/script.js"></script>
