--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     </header>
     <main>
         <h2>How many points will be needed to win?</h2>
-        <h2>Choose one option to start:</h2>
+        <h2>Choose one option:</h2>
         <div id="choice-point-wrapper">
             <button id="3-point">3 points</button>
             <button id="5-point">5 points</button>
             <button id="10-point">10 points</button> 
         </div>
-        <a href="game.html">START GAME</a>
+        <a href="game.html" id="start-game">START GAME</a>
 </main>
 </body>
 <script src="assets/js/script.js"></script>
