--- a/game.html
+++ b/game.html
@@ -19,26 +19,29 @@
         <div id="playing-field">
             <h2>Choose your fighter!</h2>
             <div id="point-count">
-            <p id="comp-point">Computer points:</p>
-            <p id="you-point">Your points:</p>
+            <p id="comp-point">Computer points: 0</p>
+            <p id="you-point">Your points: 0</p>
             </div>
             <div id="choice-wrapper">
-                <div class="choices-red">
+                <button class="choices-red">
                     <h3>Rock</h3>
-                </div>
-                <div class="choices-blue">
+                </button>
+                <button class="choices-blue">
                     <h3>Paper</h3>
-                </div>
-                <div class="choices-red">
+                </button>
+                <button class="choices-red">
                     <h3>Sissors</h3>
-                </div>
-                <div class="choices-red">
+                </button>
+                <button class="choices-red">
                     <h3>Lizard</h3>
-                </div>
-                <div class="choices-blue">
+                </button>
+                <button class="choices-blue">
                     <h3>Spock</h3>
-                </div>
+                </button>
             </div>
+            <h3>YOU vs. COMPUTER</h3>
+            <p id="who-won"></p>
+            <button id="choose-again">Choose again!</button>
         </div>
     </main>
     <footer>
