added all choices as objects, made random number function
Also started funcrion for when you choose an option.

--- a/game.html
+++ b/game.html
@@ -23,19 +23,19 @@
             <p id="you-point">Your points: 0</p>
             </div>
             <div id="choice-wrapper">
-                <button class="choices-red">
+                <button onclick="compChoiceRandom()" class="choices-red">
                     <h3>Rock</h3>
                 </button>
-                <button class="choices-blue">
+                <button onclick="compChoiceRandom()" class="choices-blue">
                     <h3>Paper</h3>
                 </button>
-                <button class="choices-red">
+                <button onclick="chosenGameOption(choiceObjects[0])" class="choices-red">
                     <h3>Sissors</h3>
                 </button>
-                <button class="choices-red">
+                <button onclick="compChoiceRandom()" class="choices-red">
                     <h3>Lizard</h3>
                 </button>
-                <button class="choices-blue">
+                <button onclick="compChoiceRandom()" class="choices-blue">
                     <h3>Spock</h3>
                 </button>
             </div>
