--- a/game.html
+++ b/game.html
@@ -23,19 +23,19 @@
             <p id="you-point">Your points: 0</p>
             </div>
             <div id="choice-wrapper">
-                <button onclick="compChoiceRandom()" class="choices-red">
+                <button onclick="playGame(choiceObjects[0])" class="choices-red">
                     <h3>Rock</h3>
                 </button>
-                <button onclick="compChoiceRandom()" class="choices-blue">
+                <button onclick="playGame(choiceObjects[1])" class="choices-blue">
                     <h3>Paper</h3>
                 </button>
-                <button onclick="chosenGameOption(choiceObjects[0])" class="choices-red">
+                <button onclick="playGame(choiceObjects[2])" class="choices-red">
                     <h3>Sissors</h3>
                 </button>
-                <button onclick="compChoiceRandom()" class="choices-red">
+                <button onclick="playGame(choiceObjects[3])" class="choices-red">
                     <h3>Lizard</h3>
                 </button>
-                <button onclick="compChoiceRandom()" class="choices-blue">
+                <button onclick="playGame(choiceObjects[4])" class="choices-blue">
                     <h3>Spock</h3>
                 </button>
             </div>
