made playGame work
Made playGame work, made it simpler, made it anounce the result to the user.

--- a/game.html
+++ b/game.html
@@ -39,8 +39,8 @@
                     <h3>Spock</h3>
                 </button>
             </div>
-            <h3>YOU vs. COMPUTER</h3>
-            <p id="who-won"></p>
+            <h3 id="choice-display">YOU vs. COMPUTER</h3>
+            <p id="who-won">RESULT</p>
             <button id="choose-again">Choose again!</button>
         </div>
     </main>
