function - is game done?
Made a function that checks if the game is done and who wins. Triggered when you click continue button.

--- a/game.html
+++ b/game.html
@@ -41,7 +41,7 @@
             </div>
             <h3 id="choice-display">YOU vs. COMPUTER</h3>
             <p id="who-won">RESULT</p>
-            <button id="choose-again">Choose again!</button>
+            <button id="continue" onclick="restore(pointChoice)">Continue!</button>
         </div>
     </main>
     <footer>
