--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head onload="sessionStorage.clear();">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,11 +18,11 @@
         <h2>How many points will be needed to win?</h2>
         <h2>Choose one option:</h2>
         <div id="choice-point-wrapper">
-            <button id="3-point">3 points</button>
-            <button id="5-point">5 points</button>
-            <button id="10-point">10 points</button> 
+            <button id="3-point" onclick="choosePointAmount(threePoint)">3 points</button>
+            <button id="5-point" onclick="choosePointAmount(fivePoint)">5 points</button>
+            <button id="10-point" onclick="choosePointAmount(tenPoint)">10 points</button> 
         </div>
-        <a href="game.html" id="start-game">START GAME</a>
+        <a href="game.html" id="start-game" onclick="checkingPointChoice()">START GAME</a>
 </main>
 </body>
 <script src="assets/js/script.js"></script>
