--- a/game.html
+++ b/game.html
@@ -47,11 +47,11 @@
             <h2>How many points will be needed to win?</h2>
             <h2>Choose one option:</h2>
             <div id="choice-point-wrapper">
-                <button id="3-point" onclick="choosePointAmount(threePoint)">3 points</button>
-                <button id="5-point" onclick="choosePointAmount(fivePoint)">5 points</button>
-                <button id="10-point" onclick="choosePointAmount(tenPoint)">10 points</button> 
+                <button id="3-point" class="point-button" onclick="choosePointAmount(threePoint)">3 points</button>
+                <button id="5-point" class="point-button" onclick="choosePointAmount(fivePoint)">5 points</button>
+                <button id="10-point" class="point-button" onclick="choosePointAmount(tenPoint)">10 points</button> 
             </div>
-            <button id="continue" onclick="zIndexChange()">Continue!</button>
+            <button id="continue-to-game" onclick="zIndexChange()">Continue!</button>
         </div>
     </main>
     <footer>
