--- a/game.html
+++ b/game.html
@@ -26,7 +26,7 @@
                 <button onclick="playGame(choiceObjects[0])" class="choices-red">
                     <h3>Rock</h3>
                 </button>
-                <button onclick="playGame(choiceObjects[1])" class="choices-blue">
+                <button onclick="playGame(choiceObjects[1])" class="choices-red">
                     <h3>Paper</h3>
                 </button>
                 <button onclick="playGame(choiceObjects[2])" class="choices-red">
@@ -35,7 +35,7 @@
                 <button onclick="playGame(choiceObjects[3])" class="choices-red">
                     <h3>Lizard</h3>
                 </button>
-                <button onclick="playGame(choiceObjects[4])" class="choices-blue">
+                <button onclick="playGame(choiceObjects[4])" class="choices-red">
                     <h3>Spock</h3>
                 </button>
             </div>
@@ -51,30 +51,28 @@
                 <button id="5-point" class="point-button" onclick="choosePointAmount(fivePoint)">5 points</button>
                 <button id="10-point" class="point-button" onclick="choosePointAmount(tenPoint)">10 points</button> 
             </div>
-            <button id="continue-to-game" onclick="zIndexChange()">Continue!</button>
+            <button id="continue-to-game" onclick="zIndexChange(continueToGame)">Continue!</button>
+        </div>
+        <div id="result-game-display">
+            <h1>Result</h1>
+            <button id="new-game" onclick="choosePointAmount(newGame)">3 points</button>
+            <p>Game made by Erik Vodopivec Forsman</p>
         </div>
     </main>
     <footer>
         <h4>Rules</h4>
-        <p>- Scissors cuts Paper <br> <br>
-
-            - Paper covers Rock <br> <br>
-
-            - Rock crushes Lizard <br> <br>
-
-            - Lizard poisons Spock <br> <br>
-
-            - Spock smashes Scissors <br> <br>
-
-            - Scissors decapitates Lizard <br> <br>
-
-            - Lizard eats Paper <br> <br>
-
-            - Paper disproves Spock <br> <br>
-
-            - Spock vaporizes Rock <br> <br>
-
-            - Rock crushes Scissors</p> <br>
+        <ul>
+            <li>Scissors cuts Paper</li>
+            <li>Paper covers Rock</li>
+            <li>Rock crushes Lizard</li>
+            <li>Lizard poisons Spock</li>
+            <li>Spock smashes Scissors</li>
+            <li>Scissors decapitates Lizard</li>
+            <li>Lizard eats Paper</li>
+            <li>Paper disproves Spock</li>
+            <li>Spock vaporizes Rock</li>
+            <li>Rock crushes Scissors</li>
+        </ul>
     </footer>
 </div>
 
