made the zIndex changes work
Made sure the zIndex changes when you press on the continue button and new game button. It also changes the zIndex on the "you won/lost"-window when a game is over.

--- a/game.html
+++ b/game.html
@@ -51,11 +51,11 @@
                 <button id="5-point" class="point-button" onclick="choosePointAmount(fivePoint)">5 points</button>
                 <button id="10-point" class="point-button" onclick="choosePointAmount(tenPoint)">10 points</button> 
             </div>
-            <button id="continue-to-game" onclick="zIndexChange(continueToGame)">Continue!</button>
+            <button id="continue-to-game" onclick="zIndexChange(toGame)">Continue!</button>
         </div>
         <div id="result-game-display">
-            <h1>Result</h1>
-            <button id="new-game" onclick="choosePointAmount(newGame)">3 points</button>
+            <h1 id="who-won-game">Result</h1>
+            <button id="new-game" onclick="zIndexChange(newGame)">3 points</button>
             <p>Game made by Erik Vodopivec Forsman</p>
         </div>
     </main>
