finished instructions on start page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
         the points needed to win will be 3 by default.
         <br/><br/>
         On the game page you need to choose an option. 
+        When you have chosen an option you press continue.
+        If you or the computer has enough points to win it will send you to
+        a page anouncig the winner. 
+        <br><br>
+        If you want to play again you can press the "New game!" button. 
         </p>
+        <a href="game.html">Play game!</a>
     </main>
 
 </body>
