css for index.html

--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style_start.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Rock, paper, sissors, lizard, spock</title>
 </head>
-<body>
-    <header>
-        <h1>Rock, paper, sissors, lizard, spock!</h1>
+<body id="body-start">
+    <header id="h-start">
+        <h1 class="start-page">Rock, paper, sissors, lizard, spock!</h1>
     </header>
-    <main>
-        <h2>How the game works</h2>
-        <p>
+    <main id="m-start">
+        <h2 class="start-page">How the game works</h2>
+        <p class="start-page">
         Choose how many points you will need to win
         Then click continue. If you do not make a choice, 
         the points needed to win will be 3 by default.
@@ -25,7 +28,7 @@
         <br><br>
         If you want to play again you can press the "New game!" button. 
         </p>
-        <a href="game.html">Play game!</a>
+        <a href="game.html" id="play-game" class="start-page">Play game!</a>
     </main>
 
 </body>
