--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Importing the font used in this game-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
@@ -11,9 +12,11 @@
     <title>Rock, paper, sissors, lizard, spock</title>
 </head>
 <body id="body-start">
+    <!--Header with the name of the game-->
     <header id="h-start">
         <h1 class="start-page">Rock, paper, sissors, lizard, spock!</h1>
     </header>
+    <!--Main with all the page content-->
     <main id="m-start">
         <h2 class="start-page">How the game works</h2>
         <p class="start-page">
@@ -30,7 +33,7 @@
         </p>
         <a href="game.html" id="play-game" class="start-page">Play game!</a>
     </main>
-
 </body>
+<!--Link to JavaScript-->
 <script src="assets/js/script.js"></script>
 </html>
