worked on footer styling
Tried getting footer mobile styling to work. Did not work

--- a/game.html
+++ b/game.html
@@ -70,13 +70,14 @@
             <!--The result (who won)-->
             <h1 id="who-won-game">Result</h1>
             <!--Button for playing new game-->
-            <button id="new-game" onclick="zIndexChange(newGame)">3 points</button>
+            <button id="new-game" onclick="zIndexChange(newGame)">New Game</button>
             <p>Game made by Erik Vodopivec Forsman</p>
         </div>
     </main>
     <!--Footer containing the rules-->
     <footer>
         <h4>Rules</h4>
+        <img src="assets/misc/arrow-up-solid.svg" alt="up arrow">
         <ul>
             <li>Scissors cuts Paper</li>
             <li>Paper covers Rock</li>
