tried more to get footer mobile to work

--- a/game.html
+++ b/game.html
@@ -76,20 +76,22 @@
     </main>
     <!--Footer containing the rules-->
     <footer>
-        <h4>Rules</h4>
-        <img src="assets/misc/arrow-up-solid.svg" alt="up arrow">
-        <ul>
-            <li>Scissors cuts Paper</li>
-            <li>Paper covers Rock</li>
-            <li>Rock crushes Lizard</li>
-            <li>Lizard poisons Spock</li>
-            <li>Spock smashes Scissors</li>
-            <li>Scissors decapitates Lizard</li>
-            <li>Lizard eats Paper</li>
-            <li>Paper disproves Spock</li>
-            <li>Spock vaporizes Rock</li>
-            <li>Rock crushes Scissors</li>
-        </ul>
+        <div id="rules-wrapper">
+            <img id="up-arrow" src="assets/misc/arrow-up-solid.svg" touch="rulesShow()" alt="up arrow">
+            <h4>Rules</h4>
+            <ul>
+                <li>Scissors cuts Paper</li>
+                <li>Paper covers Rock</li>
+                <li>Rock crushes Lizard</li>
+                <li>Lizard poisons Spock</li>
+                <li>Spock smashes Scissors</li>
+                <li>Scissors decapitates Lizard</li>
+                <li>Lizard eats Paper</li>
+                <li>Paper disproves Spock</li>
+                <li>Spock vaporizes Rock</li>
+                <li>Rock crushes Scissors</li>
+            </ul>
+        </div>
     </footer>
 </div>
 <!--Link to JavaScript-->
