--- a/game.html
+++ b/game.html
@@ -71,26 +71,29 @@
             <h1 id="who-won-game">Result</h1>
             <!--Button for playing new game-->
             <button id="new-game" onclick="zIndexChange(newGame)">New Game</button>
-            <p>Game made by Erik Vodopivec Forsman</p>
+            <p id="creator">Game made by Erik Vodopivec Forsman</p>
         </div>
     </main>
     <!--Footer containing the rules-->
     <footer>
         <div id="rules-wrapper">
-            <img id="up-arrow" src="assets/misc/arrow-up-solid.svg" touch="rulesShow()" alt="up arrow">
             <h4>Rules</h4>
+            <div class="list-block">
             <ul>
                 <li>Scissors cuts Paper</li>
                 <li>Paper covers Rock</li>
                 <li>Rock crushes Lizard</li>
                 <li>Lizard poisons Spock</li>
                 <li>Spock smashes Scissors</li>
+            </ul></div>
+            <div class="list-block">
+            <ul>
                 <li>Scissors decapitates Lizard</li>
                 <li>Lizard eats Paper</li>
                 <li>Paper disproves Spock</li>
                 <li>Spock vaporizes Rock</li>
                 <li>Rock crushes Scissors</li>
-            </ul>
+            </ul></div>
         </div>
     </footer>
 </div>
