media querries working correctly
Mede sure the media querries work correctly . Nested a media querrie inside another one and made sure everything looks correct.

--- a/game.html
+++ b/game.html
@@ -30,21 +30,11 @@
             </div>
             <!--All 5 available choices-->
             <div id="choice-wrapper">
-                <button onclick="playGame(choiceObjects[0])" class="choices-red">
-                    <h3>Rock</h3>
-                </button>
-                <button onclick="playGame(choiceObjects[1])" class="choices-red">
-                    <h3>Paper</h3>
-                </button>
-                <button onclick="playGame(choiceObjects[2])" class="choices-red">
-                    <h3>Sissors</h3>
-                </button>
-                <button onclick="playGame(choiceObjects[3])" class="choices-red">
-                    <h3>Lizard</h3>
-                </button>
-                <button onclick="playGame(choiceObjects[4])" class="choices-red">
-                    <h3>Spock</h3>
-                </button>
+                <button onclick="playGame(choiceObjects[0])" class="choices-red">Rock</button>
+                <button onclick="playGame(choiceObjects[1])" class="choices-red">Paper</button>
+                <button onclick="playGame(choiceObjects[2])" class="choices-red">Sissors</button>
+                <button onclick="playGame(choiceObjects[3])" class="choices-red">Lizard</button>
+                <button onclick="playGame(choiceObjects[4])" class="choices-red">Spock</button>
             </div>
             <!--Information on choices and result of round-->
             <h3 id="choice-display">YOU vs. COMPUTER</h3>
