--- a/game.html
+++ b/game.html
@@ -46,6 +46,7 @@
         <div id="choice-point-display">
             <h2>How many points will be needed to win?</h2>
             <h2>Choose one option:</h2>
+            <p id="feedback-point-choice">Points chosen: 0</p>
             <!--The options-->
             <div id="choice-point-wrapper">
                 <button id="3-point" class="point-button" onclick="choosePointAmount(threePoint)">3 points</button>
