made small change to instructions
Removed the line about 3 being default point choice. This is no longer true, which means it should not be in the instructions.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
         <h2 class="start-page">How the game works</h2>
         <p class="start-page">
         Choose how many points you will need to win
-        Then click continue. If you do not make a choice, 
-        the points needed to win will be 3 by default.
+        Then click continue.
         <br/><br/>
         On the game page you need to choose an option. 
         When you have chosen an option you press continue.
