fixed small bug
When a new game was started, the point choice would not reset. This is now fixed. Also changed some variable and id names to make it easier to understand.

--- a/game.html
+++ b/game.html
@@ -43,7 +43,7 @@
             <button id="continue" onclick="endRound()">Continue!</button>
         </div>
         <!--Window for choosing points needed to win-->
-        <div id="choice-point-display">
+        <div id="choice-point-window">
             <h2>How many points will be needed to win?</h2>
             <h2>Choose one option:</h2>
             <p id="feedback-point-choice">Points chosen: 0</p>
@@ -57,7 +57,7 @@
             <button id="continue-to-game" onclick="zIndexChange(toGame)">Continue!</button>
         </div>
         <!--Window showing the result of the game-->
-        <div id="result-game-display">
+        <div id="result-game-window">
             <!--The result (who won)-->
             <h1 id="who-won-game">Result</h1>
             <!--Button for playing new game-->
