solved position issues buttons
Solved the positioning issues with the bluee buttons + play game. They are now in the middle. Play game also styled

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main id="m-start">
         <h2 class="start-page">How the game works</h2>
         <p class="start-page">
-        Choose how many points you will need to win
+        Choose how many points will be needed to win.
         Then click continue.
         <br/><br/>
         On the game page you need to choose an option. 
