changed the rules h4 to a h2
Hopefully this will gelp with the accessibility

--- a/game.html
+++ b/game.html
@@ -68,7 +68,7 @@
     <!--Footer containing the rules-->
     <footer>
         <div id="rules-wrapper">
-            <h4>Rules</h4>
+            <h2 id="rules">Rules</h2>
             <div class="list-block">
             <ul>
                 <li>Scissors cuts Paper</li>
