--- a/game.html
+++ b/game.html
@@ -9,14 +9,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Rock, paper, sissors, lizard, spock!</title>
+    <title>Rock, paper, scissors, lizard, spock!</title>
 </head>
 <body>
 <!--Grid container-->
 <div class="grid-container">
     <!--Header with the title of the game-->
     <header>
-        <h1>Rock, paper, sissors, lizard, spock!</h1>
+        <h1>Rock, paper, scissors, lizard, spock!</h1>
     </header>
     <!--Main with all the content for the game-->
     <main>
@@ -32,7 +32,7 @@
             <div id="choice-wrapper">
                 <button onclick="playGame(choiceObjects[0])" class="choices-red">Rock</button>
                 <button onclick="playGame(choiceObjects[1])" class="choices-red">Paper</button>
-                <button onclick="playGame(choiceObjects[2])" class="choices-red">Sissors</button>
+                <button onclick="playGame(choiceObjects[2])" class="choices-red">Scissors</button>
                 <button onclick="playGame(choiceObjects[3])" class="choices-red">Lizard</button>
                 <button onclick="playGame(choiceObjects[4])" class="choices-red">Spock</button>
             </div>
