--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Rock, paper, sissors, lizard, spock</title>
+    <title>Rock, paper, scissors, lizard, spock</title>
 </head>
 <body id="body-start">
     <!--Header with the name of the game-->
     <header id="h-start">
-        <h1 class="start-page">Rock, paper, sissors, lizard, spock!</h1>
+        <h1 class="start-page">Rock, paper, scissors, lizard, spock!</h1>
     </header>
     <!--Main with all the page content-->
     <main id="m-start">
